--- a/index.html
+++ b/index.html
@@ -15,27 +15,50 @@
     <ul style="list-style-type:disc">
     <li><a href="/JS Work/Assets/topic/Decision Making/decision-making-if.html" target="_blank">Decison Making If statement</a> </li>
     <li><a href="/JS Work/Assets/topic/Decision Making/decision-making-switch.html">Decison Making Switch Statement</a> </li>
-
-</ul>
+   </ul>
 <li> Looping :</li>
 <ul style="list-style-type:disc">
     <li><a href="/JS Work/Assets/topic/Loops/loops-for.html">For Loop </a> </li>
     <li><a href="/JS Work/Assets/topic/Loops/loops-while.html">While Loops</a> </li>
-
 </ul>
 <li>Arrays : </li>
 <ul style="list-style-type:disc">
     <li ><a href="/JS Work/Assets/topic/Array/array.html">Array Introduction </a> </li>
     <li><a href="/JS Work/Assets/topic/Array/array-2d.html">Ways to initialize Array and Array Methods </a> </li>
 </ul>
-
 <li >Functions :</li>
 <ul>
 <li style="list-style-type: solid"><a href="/JS Work/Assets/topic/Functions/function.html">Function Introduction </a> </li>
 <li style="list-style-type: square"><a href="/JS Work/Assets/topic/Functions/fun-callback.html" target="_blank">Function Callbacks </a> </li>
 <li style="list-style-type: square"><a href="/JS Work/Assets/topic/Functions/wiring-all-events.html" target="_blank">Function Callbacks in page load event </a> </li>
 </ul>
-<li> <a href="/JS Work/Assets/topic/Form/form.html">Validating forms using Javascript</li>
+<li> Form Validation :  </li>
+<ul>
+<li><a href="/JS Work/Assets/topic/Form/form.html">Validating forms using Javascript - for each field</a></li>
+<li><a href="/JS Work/Assets/topic/Regular Expressions/reg-exp-pattern-match.html">Regular Expressions</a></li>
+<li><a href="/JS Work/Assets/topic/Form/form-validation.html">Validating forms using Javascript - at one place</a> </li>
+<li><a href="/JS Work/Assets/topic/Form/validations-on-labels.html">Validating forms using Javascript - Err msg on Labels</a> </li>
+<li><a href="/JS Work/Assets/topic/Form/regular-expressions.html">Validating forms using Javascript - Regex</a> </li>     
+</ul> 
+<li>DOM:</li>
+<ul style="list-style-type:disc">
+    <li><a href="/JS Work/Assets/topic/DOM/Access-html-elements.html">Accessing HTML Elements</a></li>
+    <li><a href="/JS Work/Assets/topic/DOM/Intro-dom.html">Introduction to Document Object Model</a></li>
+    <li><a href="/JS Work/Assets/topic/DOM/alter-node-text-with-dom.html">Altering Node Text with DOM</a></li>
+    <li><a href="/JS Work/Assets/topic/DOM/alter-css-with-dom.html">Altering CSS: Classname with DOM</a></li>
+    <li><a href="/JS Work/Assets/topic/DOM/alter-css-visibility-of-element.html">Altering CSS:Element visibility with DOM</a></li>
+    <li><a href="/JS Work/Assets/topic/DOM/dynamic-elemt-txt-node.html">Adding Elements and text nodes dynamically</a></li> 
+    </ul>
+<li>Objects : </li>
+<ul style="list-style-type:disc">
+<li><a href="/JS Work/Assets/topic/Objects/object-intro.html"> Object Intro</a> </li>
+<li><a href="/JS Work/Assets/topic/Objects/date-n-objects.html"> Date object</a> </li>
+<li><a href="/JS Work/Assets/topic/Objects/sort-emp.html"> Sorting</a> </li>
+
+
+
+
+</ul>
 
 
 </ol>
